--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/B_barn_sko.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/B_barn_sko.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>SKO-SISAKA</title>
+  <title>Barn-sko</title>
 
   <link rel="stylesheet" href="main.css">
 </head>
@@ -166,7 +166,7 @@
 </section>
 
 
-<h1 class="h1_over">Sko</h1>
+<h1 class="h1_over">Barne Sko</h1>
 
     <div class="valg_klær1">
 
