--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/Barn.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/Barn.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>SISAKA-HERRE</title>
+  <title>SISAKA-BARN</title>
   <link rel="stylesheet" href="main.css">
 </head>
 
@@ -151,14 +151,14 @@
 
 
 <section class="overskrift">
-  <b class="selve_overskrift">Barn</b>
+  <b class="selve_overskrift">BARN</b>
 </section>
 
 
 <section class="velge_ting">
-<a href="klær.html" class="velge_ord">klær</a>
+<a href="B_barne_klær.html" class="velge_ord">klær</a>
 |
-<a href="klær.html" class="velge_ord">Sko</a>
+<a href="B_barn_sko.html" class="velge_ord">Sko</a>
 |
 <a href="klær.html" class="velge_ord">Sport</a>
 |
@@ -178,21 +178,21 @@
 
         <section class="nr1">
           <a href="a HERRE/herre.html"></a>
-          <a href="a Herre/herre.html"><img src="bilder/herremod.psd" alt="" class="bilde3"></a>
+          <a href="a Herre/herre.html"><img src="bilder/barn_modell_2.jpg" alt="" class="bilde3"></a>
         </section>
 
 
 
         <section class=" nr2">
           <a href="a HERRE/herre.html"></a>
-          <a href="a Herre/herre.html"><img src="bilder/herremod2.psd" alt="" class="bilde3"></a>
+          <a href="a Herre/herre.html"><img src="bilder/barn_modell it.jpg" alt="" class="bilde3"></a>
         </section>
 
 
 
         <section class=" nr3">
           <a href="a HERRE/herre.html"></a>
-          <a href="a Herre/herre.html"><img src="bilder/herremod3.psd" alt="" class="bilde3"></a>
+          <a href="a Herre/herre.html"><img src="bilder/barn_modell.jpg" alt="" class="bilde3"></a>
 
         </section>
   </section>
