--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/Dame.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/Dame.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>SISAKA-HERRE</title>
+  <title>SISAKA-DAME</title>
   <link rel="stylesheet" href="main.css">
 </head>
 
@@ -151,7 +151,7 @@
 
 
 <section class="overskrift">
-  <b class="selve_overskrift">Dame</b>
+  <b class="selve_overskrift">Damer</b>
 </section>
 
 
@@ -170,38 +170,15 @@
 
 
 </section>
-<section class="nyheter_hoved">
+<section class="dame_reklame">
 
-      <section class="Hoved_grid">
-
-
-
-        <section class="nr1">
-          <a href="a HERRE/herre.html"></a>
-          <a href="a Herre/herre.html"><img src="bilder/herremod.psd" alt="" class="bilde3"></a>
-        </section>
-
-
-
-        <section class=" nr2">
-          <a href="a HERRE/herre.html"></a>
-          <a href="a Herre/herre.html"><img src="bilder/herremod2.psd" alt="" class="bilde3"></a>
-        </section>
-
-
-
-        <section class=" nr3">
-          <a href="a HERRE/herre.html"></a>
-          <a href="a Herre/herre.html"><img src="bilder/herremod3.psd" alt="" class="bilde3"></a>
-
-        </section>
-  </section>
+    <a href="D_dame_sko.html"> <img src="bilder/dame modell.jpg" alt=""> </a>
 
     </section>
 
 <section class="velge_herre_klær">
 
-<section class="klæ_herre alle_4">
+<section class="klær_herre alle_4">
 <a href="klær.html"><img src="bilder/klesplagg_it.psd" alt=""> </a>
 </section>
 
@@ -222,33 +199,46 @@
 
 
 
-        <section class="brands">
+<h2 class="brand_overskrift">De beste merkene fra hele verden</h2>
+<section class="brands">
 
-        <section class="Louis">
-        <a href="klær.html"><img src="bilder/Louis.psd" alt=""> </a>
-        </section>
+  <section class="Louis">
+    <section class="brand_enogalle">
+      <a href="#"><img src="bilder/Louis.psd" alt=""> </a>
+    </section>
+  </section>
 
-        <section class="versace">
-        <a href="klær.html"><img src="bilder/versace.psd" alt=""> </a>
-        </section>
+  <section class="versace">
+    <section class="brand_enogalle">
+      <a href=""><img src="bilder/versace.psd" alt=""> </a>
+    </section>
+  </section>
 
-        <section class="Gucci">
-        <a href="klær.html"><img src="bilder/Gucci.psd" alt=""> </a>
-        </section>
+  <section class="Gucci">
+    <section class="brand_enogalle">
+      <a href="H_herre_klær.html"><img src="bilder/Gucci.psd" alt=""> </a>
+    </section>
+  </section>
 
-        <section class="off_white">
-        <a href="klær.html"><img src="bilder/off_white.psd" alt=""> </a>
-        </section>
+  <section class="off_white">
+    <section class="brand_enogalle">
+      <a href="#"><img src="bilder/off_white.psd" alt=""> </a>
+    </section>
+  </section>
 
-        <section class="Supreme">
-        <a href="klær.html"><img src="bilder/Supreme.psd" alt=""> </a>
-        </section>
+  <section class="Supreme">
+    <section class="brand_enogalle">
+      <a href="#"><img src="bilder/Supreme.psd" alt=""> </a>
+    </section>
+  </section>
 
-        <section class="Balenciaga">
-        <a href="klær.html"><img src="bilder/Balenciaga.psd" alt=""> </a>
-        </section>
+  <section class="Balenciaga">
+    <section class="brand_enogalle">
+      <a href="#"><img src="bilder/Balenciaga.psd" alt=""> </a>
+    </section>
+  </section>
 
-        </section>
+</section>
 
 
 
