--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/H_herre_klær.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/H_herre_klær.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>SKO-SISAKA</title>
+  <title>HERRE-KLÆR</title>
 
   <link rel="stylesheet" href="main.css">
 </head>
@@ -143,30 +143,30 @@
 
     </nav>
 
+    <section class="sko_kjønn">
+    <section class="Sko_herre">
+    <a href="H_herre_klær.html"><img src="bilder/herre klær.jpg" alt=""> </a>
+    <a href="H_herre_klær.html"><p>Herre klær</p></a>
+    </section>
+
+    <section class="Sko_dame">
+    <a href="D_dame_klær.html"><img src="bilder/model d@amer.jpg" alt=""> </a>
+    <a href="D_dame_klær.html"><p>Dame klær</p></a>
+    </section>
+
+    <section class="Sko_barn">
+    <a href="B_barne_klær.html"><img src="bilder/klær barn.jpg" alt=""> </a>
+    <a href="B_barne_klær.html"><p>Barne klær</p></a>
+    </section>
+
+    </section>
 
 
 
 
-<section class="sko_kjønn">
-<section class="Sko_herre">
-<a href="sko.html"><img src="bilder/herre sko.psd" alt=""> </a>
-<a href="sko.html"><p>Herre sko</p></a>
-</section>
-
-<section class="Sko_dame">
-<a href="D_dame_sko.html"><img src="bilder/dame sko.psd" alt=""> </a>
-<a href="sko.html"><p>Dame sko</p></a>
-</section>
-
-<section class="Sko_barn">
-<a href="B_barn_sko.html"><img src="bilder/sko barn.psd" alt=""> </a>
-<a href="sko.html"><p>Barne sko</p></a>
-</section>
-
-</section>
 
 
-<h1 class="h1_over">Sko</h1>
+<h1 class="h1_over">Herre KLær</h1>
 
     <div class="valg_klær1">
 
@@ -174,13 +174,13 @@
       <section class="custom-select" style="width:200px;">
         <select>
           <option value=""> Størrelse </option>
-          <option value="brus">38</option>
-          <option value="juice">39</option>
-          <option value="vann">40</option>
-          <option value="vann">41</option>
-          <option value="vann">42</option>
-          <option value="vann">43</option>
-          <option value="vann">44</option>
+          <option value="brus">xxs</option>
+          <option value="juice">xs</option>
+          <option value="vann">s</option>
+          <option value="vann">m</option>
+          <option value="vann">L</option>
+          <option value="vann">XL</option>
+          <option value="vann">XXL</option>
         </select>
       </section>
 
@@ -223,7 +223,7 @@
 
 
       <section class="søkemotorer">
-        <a href="trykk_søk.html"><button type="submit" class="knapp2">søk</button></a>
+        <a href="trykk_søk.html#valg_klær1"><button type="submit" class="knapp2">søk</button></a>
       </section>
 
 
@@ -311,14 +311,14 @@
 
 
         <ul class="tabell_halv">
-          <li><a href="sko.html" class="Klær_tekst">SKO</a></li>
+          <li><a href="#" class="Klær_tekst">Klær</a></li>
 
 
-          <li><a href="sko.html" class="tabell_ord">Mokasiner</a></li>
-          <li><a href="sko.html" class="tabell_ord">Boots </a></li>
-          <li><a href="sko.html" class="tabell_ord">Sandaler</a></li>
-          <li><a href="sko.html" class="tabell_ord">joggesko</a></li>
-          <li><a href="sko.html" class="tabell_ord">Crocs</a></li>
+          <li><a href="#" class="tabell_ord">T-skjorter</a></li>
+          <li><a href="#" class="tabell_ord">Skjorter </a></li>
+          <li><a href="#" class="tabell_ord">Jakker</a></li>
+          <li><a href="#" class="tabell_ord">Gensere</a></li>
+          <li><a href="#" class="tabell_ord">Bukser </a></li>
 
 
 
@@ -386,7 +386,9 @@
   </main>
 
 
-
+  <section class="reklame2">
+    <a href="herre.html"><img src="bilder/reklame_2bild.psd" alt=""></a>
+  </section>
 
   <footer>
 
