--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/herre.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/herre.html
@@ -153,9 +153,9 @@
 
 
 <section class="velge_ting">
-<a href="klær.html" class="velge_ord">klær</a>
+<a href="H_herre_klær.html" class="velge_ord">klær</a>
 |
-<a href="klær.html" class="velge_ord">Sko</a>
+<a href="H_herre_sko.html" class="velge_ord">Sko</a>
 |
 <a href="klær.html" class="velge_ord">Sport</a>
 |
@@ -199,7 +199,7 @@
 <section class="velge_herre_klær">
 
 <section class="klæ_herre alle_4">
-<a href="klær.html"><img src="bilder/klesplagg_it.psd" alt=""> </a>
+<a href="H_herre_klær.html"><img src="bilder/klesplagg_it.psd" alt=""> </a>
 </section>
 
 
@@ -218,35 +218,51 @@
 </section>
 
 
+<section class="brand_enogalle">
 
-        <section class="brands">
 
-        <section class="Louis">
-        <a href="klær.html"><img src="bilder/Louis.psd" alt=""> </a>
-        </section>
 
-        <section class="versace">
-        <a href="klær.html"><img src="bilder/versace.psd" alt=""> </a>
-        </section>
+  <h2 class="brand_overskrift">De beste merkene fra hele verden</h2>
+  <section class="brands">
 
-        <section class="Gucci">
-        <a href="klær.html"><img src="bilder/Gucci.psd" alt=""> </a>
-        </section>
+    <section class="Louis">
+      <section class="brand_enogalle">
+        <a href="#"><img src="bilder/Louis.psd" alt=""> </a>
+      </section>
+    </section>
 
-        <section class="off_white">
-        <a href="klær.html"><img src="bilder/off_white.psd" alt=""> </a>
-        </section>
+    <section class="versace">
+      <section class="brand_enogalle">
+        <a href=""><img src="bilder/versace.psd" alt=""> </a>
+      </section>
+    </section>
 
-        <section class="Supreme">
-        <a href="klær.html"><img src="bilder/Supreme.psd" alt=""> </a>
-        </section>
+    <section class="Gucci">
+      <section class="brand_enogalle">
+        <a href="#"><img src="bilder/Gucci.psd" alt=""> </a>
+      </section>
 
-        <section class="Balenciaga">
-        <a href="klær.html"><img src="bilder/Balenciaga.psd" alt=""> </a>
-        </section>
+    </section>
 
-        </section>
+    <section class="off_white">
+      <section class="brand_enogalle">
+        <a href="#"><img src="bilder/off_white.psd" alt=""> </a>
+      </section>
+    </section>
 
+    <section class="Supreme">
+      <section class="brand_enogalle">
+        <a href="#"><img src="bilder/Supreme.psd" alt=""> </a>
+      </section>
+    </section>
+
+    <section class="Balenciaga">
+      <section class="brand_enogalle">
+        <a href="#"><img src="bilder/Balenciaga.psd" alt=""> </a>
+      </section>
+    </section>
+
+  </section>
 
 
   </main>
@@ -304,7 +320,7 @@
               </td>
             </tr>
             <tr>
-              <td><a href="klær.html">Klær</a>
+              <td><a href="H_herre_klær.html">Klær</a>
               </td>
             </tr>
             <tr>
