--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/herre_klesplagg1.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/herre_klesplagg1.html
@@ -224,7 +224,7 @@
 
 
 
-    <h1 class="H1">FOLK LIKER OGSÅ:</h1>
+    <h1 class="H1_klesplagg">FOLK LIKER OGSÅ</h1>
 
     <section class="nyheter_hoved">
 
