--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
@@ -188,8 +188,8 @@
 
     </section>
 
-    <h1 class="H1">HERRE→ </h1>
-    <h2 class="H2">———————Nyheter———————</h2>
+    <h1 class="H1">HERRE→KLÆR </h1>
+    <h2 class="H2">Get the christmas look</h2>
 
     <section class="nyheter_hoved">
 
@@ -230,7 +230,7 @@
 
 
       <section class="nyheter_index">
-        <div class="bilde"><img src="bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+        <div class="bilde"><img src="bilder/it klesnettside nyhet ralph.jpg" class="bilde_hover" alt=""></div>
         <div class="Merke">Polo Ralph Lauren </div>
         <div class="navn">BEAR - Strikkegenser
         </div>
