--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/klær.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/klær.html
@@ -143,13 +143,28 @@
 
     </nav>
 
+    <section class="sko_kjønn">
+    <section class="Sko_herre">
+    <a href="H_herre_klær.html"><img src="bilder/herre klær.jpg" alt=""> </a>
+    <a href="H_herre_klær.html"><p>Herre klær</p></a>
+    </section>
 
-    <section class="reklame2">
-      <a href="herre.html"><img src="bilder/reklame_2bild.psd" alt=""></a>
+    <section class="Sko_dame">
+    <a href="D_dame_klær.html"><img src="bilder/model d@amer.jpg" alt=""> </a>
+    <a href="D_dame_klær.html"><p>Dame klær</p></a>
+    </section>
+
+    <section class="Sko_barn">
+    <a href="B_barn_klær.html"><img src="bilder/klær barn.jpg" alt=""> </a>
+    <a href="B_barn_klær.html"><p>Barne klær</p></a>
+    </section>
+
     </section>
 
 
-<h1 class="h1_over">Herre klær</h1>
+
+
+<h1 class="h1_over">klær</h1>
 
     <div class="valg_klær1">
 
@@ -206,7 +221,7 @@
 
 
       <section class="søkemotorer">
-        <a href="trykk_søk.html"><button type="submit" class="knapp2">søk</button></a>
+        <a href="trykk_søk.html#valg_klær1"><button type="submit" class="knapp2">søk</button></a>
       </section>
 
 
@@ -311,7 +326,7 @@
 
 
 
-      <section class="_index">
+      <section class="velge_klær">
         <div class="bilde"><img src="bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
         <div class="Merke">Polo Ralph Lauren </div>
         <div class="navn">BEAR - Strikkegenser
@@ -319,7 +334,7 @@
         <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
       </section>
 
-      <section class="_index">
+      <section class="velge_klær">
         <div class="bilde"><img src="bilder/lauren_it.jpg" alt=""></div>
         <div class="Merke">Polo Ralph Lauren </div>
         <div class="navn">strikkegenser
@@ -327,7 +342,7 @@
         <div class="pris"><mark class="nåpris">999 kr </mark> <mark class="førpris">169 999 </mark> <mark class="nåpris">45%</mark> </div>
       </section>
 
-      <section class="_index">
+      <section class="velge_klær">
         <div class="bilde"><img src="bilder/it dress.jpg" alt=""></div>
         <div class="Merke">VERSACE </div>
         <div class="navn"> dress jakke
@@ -335,7 +350,7 @@
         <div class="pris"><mark class="nåpris">230 kr </mark> <mark class="førpris">9 999 </mark> <mark class="nåpris">10%</mark> </div>
       </section>
 
-      <section class="_index">
+      <section class="velge_klær">
         <div class="bilde"><img src="bilder/it klesnettside nyhet.jpg" alt=""></div>
         <div class="Merke">Napapirji </div>
         <div class="navn">Utebukse
@@ -343,7 +358,7 @@
         <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">95%</mark> </div>
       </section>
 
-      <section class="_index">
+      <section class="velge_klær">
         <div class="bilde"><img src="bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
         <div class="Merke">Polo Ralph Lauren </div>
         <div class="navn">BEAR - Strikkegenser
@@ -351,7 +366,7 @@
         <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
       </section>
 
-      <section class="_index">
+      <section class="velge_klær">
         <div class="bilde"><img src="bilder/lauren_it.jpg" alt=""></div>
         <div class="Merke">Polo Ralph Lauren </div>
         <div class="navn">strikkegenser
@@ -369,7 +384,9 @@
   </main>
 
 
-
+  <section class="reklame2">
+    <a href="herre.html"><img src="bilder/reklame_2bild.psd" alt=""></a>
+  </section>
 
   <footer>
 
