--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/logginn.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/logginn.html
@@ -10,7 +10,8 @@
 
 <section class="logginn_side">
 
-
+<a href="index.html">TILBAKE TIL FORSIDEN</a>
+<br>
 <label>Brukernavn:</label>
 <input type="text" name="navn" required placeholder="Brukernavn">
 <br>
