--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/trykk_søk.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/trykk_søk.html
@@ -151,7 +151,7 @@
 
 <h1 class="h1_over">Herre klær</h1>
 
-    <div class="valg_klær1">
+    <div class="Valgklær1" id="valg_klær1">
 
 
       <section class="custom-select" style="width:200px;">
@@ -206,7 +206,7 @@
 
 
       <section class="søkemotorer">
-        <a href="å_søke.html"><button type="submit" class="knapp2">søk</button></a>
+        <a href="klær.html"><button type="submit" class="knapp2">søk</button></a>
       </section>
 
 
