--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/Salg.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/Salg.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>HERRE-KLÆR</title>
+
   <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
+
   <header>
     <section class="lang">
       <a>Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt</a>
@@ -18,7 +20,7 @@
     <section class="lenke damherbar">
       <a href="Dame.html">DAME </a>
       |
-      <a href="../herre.html"> HERRE </a>
+      <a href="herre.html"> HERRE </a>
       |
       <a href="Barn.html"> BARN</a>
     </section>
@@ -31,7 +33,7 @@
 
 
     <section>
-      <a href="index.html"><img src="../bilder/logo.psd" alt="logo" class="logo"></a>
+      <a href="index.html"><img src="bilder/riktiglogos.pdf" alt="logo" class="logo"></a>
     </section>
 
 
@@ -44,7 +46,7 @@
     <div class="lenke logginn">
 
 
-      <a href="logginn.html"><img src="../bilder/logg inn.png" alt="" class="logginnbilde"> </a>
+      <a href="logginn.html"><img src="bilder/logg inn.png" alt="" class="logginnbilde"> </a>
 
       <a href="logginn.html"><br>LOGG INN</a>
 
@@ -56,7 +58,7 @@
 
     <div class="lenke logginn">
 
-      <a href="ønskeliste.html"><img src="../bilder/ønskeliste.png" alt="" class="logginnbilde"> </a>
+      <a href="ønskeliste.html"><img src="bilder/ønskeliste.png" alt="" class="logginnbilde"> </a>
 
       <a href="ønskeliste.html">LISTE</a>
 
@@ -69,68 +71,67 @@
     <nav class="navigation">
 
 
+
       <section class="klesvalg">
 
 
 
-
-        <div class="dropned"><a href="../herre.html">klær </a>
-          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+        <section class="dropned">
+          <button class="dropknapp"><a href="klær.html">Klær</a>
           </button>
-          <div class="dropned-content">
-            <a href="#">HERRE</a>
-            <a href="#">DAME</a>
-            <a href="#">BARN</a>
-          </div>
-        </div>
+          <section class="dropned-content">
+            <a href="klær.html">Gensere</a>
+            <a href="klær.html">Bukser</a>
+            <a href="klær.html">Jakker</a>
+          </section>
+        </section>
 
 
+        <section class="dropned">
+          <button class="dropknapp"><a href="sko.html">Sko</a>
 
-        <div class="dropned"><a href="../herre.html">Sko </a>
-          <button class="dropknapp" <i class="fa fa-caret-down"></i>
           </button>
-          <div class="dropned-content">
-            <a href="#">HERRE</a>
-            <a href="#">DAME</a>
-            <a href="#">BARN</a>
-          </div>
-        </div>
+          <section class="dropned-content">
+            <a href="sko.html">Boots</a>
+            <a href="sko.html">Tøfler</a>
+            <a href="sko.html">Mokasiner</a>
+          </section>
+        </section>
 
 
 
-        <div class="dropned"><a href="../herre.html">sport </a>
-          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+        <section class="dropned">
+          <button class="dropknapp"><a href="sport.html">Sport</a>
           </button>
-          <div class="dropned-content">
-            <a href="#">HERRE</a>
-            <a href="#">DAME</a>
-            <a href="#">BUKSER</a>
-          </div>
-        </div>
+          <section class="dropned-content">
+            <a href="sport.html">Sport overdeler</a>
+            <a href="sport.html">Sport underdeler</a>
+            <a href="sport.html">Sport relatert</a>
+          </section>
+        </section>
 
 
 
-        <div class="dropned"><a href="../herre.html">accesories </a>
-          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+        <section class="dropned">
+          <button class="dropknapp"><a href="accesories.html">Accesories</a>
           </button>
-          <div class="dropned-content">
-            <a href="#">HERRE</a>
-            <a href="#">DAME</a>
-            <a href="#">BARN</a>
-          </div>
-        </div>
+          <section class="dropned-content">
+            <a href="accesories.html">Klokker</a>
+            <a href="accesories.html">Slips</a>
+            <a href="accesories.html">Belter</a>
+          </section>
+        </section>
 
 
-        <div class="dropned"><a href="../herre.html">Salg </a>
-          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+        <section class="dropned">
+          <button class="dropknapp"><a href="Salg.html">Salg</a>
           </button>
-          <div class="dropned-content">
-            <a href="#">HERRE</a>
-            <a href="#">DAME</a>
-            <a href="#">BARN</a>
-          </div>
-        </div>
+
+        </section>
+
+
       </section>
+
 
       <section class="denusynlig">
 
@@ -143,22 +144,146 @@
     </nav>
 
 
+    <section class="reklame2">
+      <a href="herre.html"><img src="bilder/reklame_2bild.psd" alt=""></a>
+    </section>
 
-    <section class="reklame1">
 
+<h1 class="h1_over">Årets jule Salg!!!</h1>
+
+    <div class="valg_klær1">
+
+
+      <section class="custom-select" style="width:200px;">
+        <select>
+          <option value=""> Størrelse </option>
+          <option value="brus">xxs</option>
+          <option value="juice">xs</option>
+          <option value="vann">s</option>
+          <option value="vann">m</option>
+          <option value="vann">L</option>
+          <option value="vann">XL</option>
+          <option value="vann">XXL</option>
+        </select>
+      </section>
+
+
+
+      <section class="custom-select" style="width:200px;">
+        <select>
+          <option value="">Pris </option>
+          <option value="brus">0-100</option>
+          <option value="juice">100-500</option>
+          <option value="vann">500-1000</option>
+          <option value="vann">1000-10 000</option>
+          <option value="vann">10 000-100 000</option>
+          <option value="vann">100 000-1 000 000</option>
+        </select>
     </section>
 
 
 
+      <section class="custom-select" style="width:200px;">
+        <select>
+          <option value="">Farge</option>
+          <option value="brus">Rød</option>
+          <option value="juice">Hvit</option>
+          <option value="vann">Svart</option>
+          <option value="brus">Blå</option>
+        </select>
+          </section>
+
+
+          <section class="custom-select" style="width:200px;">
+            <select>
+              <option value="">Merke</option>
+              <option value="brus">Supreme</option>
+              <option value="juice">Gucci</option>
+              <option value="vann">Louis Vuitton</option>
+              <option value="brus">Balenciaga</option>
+            </select>
+              </section>
+
+
+      <section class="søkemotorer">
+        <a href="trykk_søk.html"><button type="submit" class="knapp2">søk</button></a>
+      </section>
+
+
+</div>
 
 
 
+    <script>
+      var x, i, j, selElmnt, a, b, c;
 
+      x = document.getElementsByClassName("custom-select");
+      for (i = 0; i < x.length; i++) {
+        selElmnt = x[i].getElementsByTagName("select")[0];
 
-    <section class="valg">
-<h2>her skal man velge klær</h2>
-    </section>
+        a = document.createElement("DIV");
+        a.setAttribute("class", "select-selected");
+        a.innerHTML = selElmnt.options[selElmnt.selectedIndex].innerHTML;
+        x[i].appendChild(a);
 
+        b = document.createElement("DIV");
+        b.setAttribute("class", "select-items select-hide");
+        for (j = 1; j < selElmnt.length; j++) {
+
+          c = document.createElement("DIV");
+          c.innerHTML = selElmnt.options[j].innerHTML;
+          c.addEventListener("click", function(e) {
+
+            var y, i, k, s, h;
+            s = this.parentNode.parentNode.getElementsByTagName("select")[0];
+            h = this.parentNode.previousSibling;
+            for (i = 0; i < s.length; i++) {
+              if (s.options[i].innerHTML == this.innerHTML) {
+                s.selectedIndex = i;
+                h.innerHTML = this.innerHTML;
+                y = this.parentNode.getElementsByClassName("same-as-selected");
+                for (k = 0; k < y.length; k++) {
+                  y[k].removeAttribute("class");
+                }
+                this.setAttribute("class", "same-as-selected");
+                break;
+              }
+            }
+            h.click();
+          });
+          b.appendChild(c);
+        }
+        x[i].appendChild(b);
+        a.addEventListener("click", function(e) {
+
+          e.stopPropagation();
+          closeAllSelect(this);
+          this.nextSibling.classList.toggle("select-hide");
+          this.classList.toggle("select-arrow-active");
+        });
+      }
+
+      function closeAllSelect(elmnt) {
+
+        var x, y, i, arrNo = [];
+        x = document.getElementsByClassName("select-items");
+        y = document.getElementsByClassName("select-selected");
+        for (i = 0; i < y.length; i++) {
+          if (elmnt == y[i]) {
+            arrNo.push(i)
+          } else {
+            y[i].classList.remove("select-arrow-active");
+          }
+        }
+        for (i = 0; i < x.length; i++) {
+          if (arrNo.indexOf(i)) {
+            x[i].classList.add("select-hide");
+          }
+        }
+      }
+
+      document.addEventListener("click", closeAllSelect);
+    </script>
 
 
 
@@ -168,61 +293,74 @@
       <section class="tabell_full">
 
 
-<ul class="tabell_halv">
-  <li><a href="#" class="Klær_tekst">Klær</a></li>
+        <ul class="tabell_halv">
+          <li><a href="#" class="Klær_tekst">Klær</a></li>
 
 
-  <li><a href="#" class="tabell_ord">T-skjorter</a></li>
-  <li><a href="#"class="tabell_ord" >Skjorter </a></li>
-  <li><a href="#"class="tabell_ord">Jakker</a></li>
-  <li><a href="#"class="tabell_ord">Gensere</a></li>
-  <li><a href="#"class="tabell_ord">Bukser </a></li>
-  <li><a href="#"class="tabell_ord">Undertøy </a></li>
-  <li><a href="#"class="tabell_ord"></a></li>
-  <li><a href="#"class="tabell_ord"> </a></li>
-  <li><a href="#"class="tabell_ord"> </a></li>
-    <li><a href="#" class="Klær_tekst">Sko</a></li>
+          <li><a href="#" class="tabell_ord">T-skjorter</a></li>
+          <li><a href="#" class="tabell_ord">Skjorter </a></li>
+          <li><a href="#" class="tabell_ord">Jakker</a></li>
+          <li><a href="#" class="tabell_ord">Gensere</a></li>
+          <li><a href="#" class="tabell_ord">Bukser </a></li>
 
-</ul>
+
+
+
+        </ul>
       </section>
 
 
 
-        <section class="_index">
-          <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
-          <div class="Merke">Polo Ralph Lauren </div>
-          <div class="navn">BEAR - Strikkegenser
-          </div>
-          <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
-        </section>
-
-        <section class="_index">
-          <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
-          <div class="Merke">Polo Ralph Lauren </div>
-          <div class="navn">BEAR - Strikkegenser
-          </div>
-          <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
-        </section>
-
-        <section class="_index">
-          <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
-          <div class="Merke">Polo Ralph Lauren </div>
-          <div class="navn">BEAR - Strikkegenser
-          </div>
-          <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
-        </section>
-
-        <section class="_index">
-          <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
-          <div class="Merke">Polo Ralph Lauren </div>
-          <div class="navn">BEAR - Strikkegenser
-          </div>
-          <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
-        </section>
-
-
-
+      <section class="_index">
+        <div class="bilde"><img src="bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren </div>
+        <div class="navn">BEAR - Strikkegenser
+        </div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
       </section>
+
+      <section class="_index">
+        <div class="bilde"><img src="bilder/lauren_it.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren </div>
+        <div class="navn">strikkegenser
+        </div>
+        <div class="pris"><mark class="nåpris">999 kr </mark> <mark class="førpris">169 999 </mark> <mark class="nåpris">45%</mark> </div>
+      </section>
+
+      <section class="_index">
+        <div class="bilde"><img src="bilder/it dress.jpg" alt=""></div>
+        <div class="Merke">VERSACE </div>
+        <div class="navn"> dress jakke
+        </div>
+        <div class="pris"><mark class="nåpris">230 kr </mark> <mark class="førpris">9 999 </mark> <mark class="nåpris">10%</mark> </div>
+      </section>
+
+      <section class="_index">
+        <div class="bilde"><img src="bilder/it klesnettside nyhet.jpg" alt=""></div>
+        <div class="Merke">Napapirji </div>
+        <div class="navn">Utebukse
+        </div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">95%</mark> </div>
+      </section>
+
+      <section class="_index">
+        <div class="bilde"><img src="bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren </div>
+        <div class="navn">BEAR - Strikkegenser
+        </div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
+      </section>
+
+      <section class="_index">
+        <div class="bilde"><img src="bilder/lauren_it.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren </div>
+        <div class="navn">strikkegenser
+        </div>
+        <div class="pris"><mark class="nåpris">999 kr </mark> <mark class="førpris">169 999 </mark> <mark class="nåpris">45%</mark> </div>
+      </section>
+
+
+
 
 
 
@@ -233,14 +371,7 @@
 
 
 
-
-
   <footer>
-
-    <section class="reklame2">
-
-    </section>
-
 
     <section class="hele_footer">
 
@@ -254,10 +385,10 @@
           </thead>
           <tbody>
             <tr>
-              <td><a href="../logginn.html"> LOGG INN</a></td>
+              <td><a href="logginn.html"> LOGG INN</a></td>
             </tr>
             <tr>
-              <td><a href="../ønskeliste.html">ØNSKELISTE</a></td>
+              <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
             </tr>
             <tr>
               <td>KONTAKT OSS</td>
@@ -270,26 +401,27 @@
         </table>
       </section>
 
-      <section class="../Herre_footer">
+      <section class="Herre_footer">
         <table>
           <thead>
             <tr>
-              <th>HERRE</th>
+              <th><a href="Barn.html">HERRE</a></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td> <a href="../index.html">FORSIDE</a>
+              <td> <a href="herre.html">Herre</a>
               </td>
             </tr>
             <tr>
-              <td>NYHETER</td>
+              <td><a href="klær.html">Klær</a>
+              </td>
             </tr>
             <tr>
-              <td>SALG</td>
+              <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td>SKO</td>
+              <td><a href="sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
@@ -301,26 +433,26 @@
         <table>
           <thead>
             <tr>
-              <th>DAMER</th>
+              <th><a href="Barn.html">DAMER</a></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td><a href="../index.html">FORSIDE</a></td>
+              <td><a href="Dame.html">Damer</a></td>
             </tr>
             <tr>
-              <td>NYHETER</td>
+              <td><a href="klær.html">Klær</a>
+              </td>
             </tr>
             <tr>
-              <td>SALG</td>
+              <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td>SKO</td>
+              <td><a href="sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
         </table>
-        <tr>
 
       </section>
 
@@ -328,22 +460,45 @@
         <table>
           <thead>
             <tr>
-              <th>BARN</th>
+              <th><a href="Barn.html">BARN</a></th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td><a href="index.html">FORSIDE</a></td>
+              <td><a href="Barn.html">Barn</a></td>
             </tr>
             <tr>
-              <td>NYHETER</td>
+              <td><a href="klær.html">Klær</a>
+              </td>
             </tr>
             <tr>
-              <td>SALG</td>
+              <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td>SKO</td>
+              <td><a href="sko.html"> SKO</a></td>
             </tr>
+          </tbody>
+
+        </table>
+
+      </section>
+
+
+
+      <section class="sosial_footer">
+        <table>
+          <thead>
+            <tr>
+              <th>Følg oss</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="http://www.singhsandhu.com"><img src="bilder/face.png" class="sosbilder"></a></td>
+              <td><a href="http://www.singhsandhu.com"><img src="bilder/twit.png" class="sosbilder"></a></td>
+              <td><a href="http://www.singhsandhu.com"><img src="bilder/insta.jpg" class="sosbilder"></a></td>
+            </tr>
+
           </tbody>
 
         </table>
@@ -351,28 +506,7 @@
 
 
 
-    <section class="sosial_footer">
-      <table>
-        <thead>
-          <tr>
-            <th>Følg oss</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td><a href="http://www.singhsandhu.com"><img src="../bilder/face.png" class="sosbilder"></a></td>
-            <td><a href="http://www.singhsandhu.com"><img src="../bilder/twit.png" class="sosbilder"></a></td>
-            <td><a href="http://www.singhsandhu.com"><img src="../bilder/insta.jpg" class="sosbilder"></a></td>
-          </tr>
-
-        </tbody>
-
-      </table>
     </section>
-
-
-
-      </section>
   </footer>
 
 
