--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/Barn.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/Barn.html
@@ -197,12 +197,12 @@
     <section class="velge_herre_klær">
 
       <section class="klæ_herre alle_4">
-        <a href="klær.html"><img src="bilder/klesplagg_it.jpg" alt="bilde"> </a>
+        <a href="B_barne_klær.html"><img src="bilder/klesplagg_it.jpg" alt="bilde"> </a>
       </section>
 
 
       <section class="sko_herre alle_4">
-        <a href="sko.html"><img src="bilder/sko_it.jpg" alt="bilde"> </a>
+        <a href="b_barn_sko.html"><img src="bilder/sko_it.jpg" alt="bilde"> </a>
       </section>
 
       <section class="Accesories alle_4">
@@ -270,7 +270,6 @@
 
 
 
-
     <section class="hele_footer">
 
 
@@ -289,10 +288,10 @@
               <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
             </tr>
             <tr>
-              <td>KONTAKT OSS</td>
+              <td><a href="virker_ikke.html">KONTAKT OSS</a></td>
             </tr>
             <tr>
-              <td>BLI MEDLEM</td>
+              <td><a href="virker_ikke.html">FÅ NYHETSBREV</a></td>
             </tr>
           </tbody>
 
@@ -303,7 +302,7 @@
         <table>
           <thead>
             <tr>
-              <th><a href="Barn.html">HERRE</a></th>
+              <th><a href="herre.html">HERRE</a></th>
             </tr>
           </thead>
           <tbody>
@@ -312,14 +311,14 @@
               </td>
             </tr>
             <tr>
-              <td><a href="klær.html">Klær</a>
+              <td><a href="H_herre_klær.html">Klær</a>
               </td>
             </tr>
             <tr>
               <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td><a href="sko.html"> SKO</a></td>
+              <td><a href="H_herre_sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
@@ -331,7 +330,7 @@
         <table>
           <thead>
             <tr>
-              <th><a href="Barn.html">DAMER</a></th>
+              <th><a href="dame.html">DAMER</a></th>
             </tr>
           </thead>
           <tbody>
@@ -339,14 +338,14 @@
               <td><a href="Dame.html">Damer</a></td>
             </tr>
             <tr>
-              <td><a href="klær.html">Klær</a>
+              <td><a href="D_dame_klær.html">Klær</a>
               </td>
             </tr>
             <tr>
               <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td><a href="sko.html"> SKO</a></td>
+              <td><a href="D_dame_sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
@@ -366,14 +365,14 @@
               <td><a href="Barn.html">Barn</a></td>
             </tr>
             <tr>
-              <td><a href="klær.html">Klær</a>
+              <td><a href="B_barne_klær.html">Klær</a>
               </td>
             </tr>
             <tr>
               <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td><a href="sko.html"> SKO</a></td>
+              <td><a href="B_barn_sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
@@ -406,7 +405,6 @@
 
     </section>
   </footer>
-
 
 </body>
 
