--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/herre_klesplagg1.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/herre_klesplagg1.html
@@ -376,10 +376,10 @@
                 <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
               </tr>
               <tr>
-                <td>KONTAKT OSS</td>
+                <td><a href="virker_ikke.html">KONTAKT OSS</a></td>
               </tr>
               <tr>
-                <td>BLI MEDLEM</td>
+                <td><a href="virker_ikke.html">FÅ NYHETSBREV</a></td>
               </tr>
             </tbody>
 
@@ -390,22 +390,23 @@
           <table>
             <thead>
               <tr>
-                <th>HERRE</th>
+                <th><a href="herre.html">HERRE</a></th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td> <a href="index.html">FORSIDE</a>
+                <td> <a href="herre.html">Herre</a>
                 </td>
               </tr>
               <tr>
-                <td>NYHETER</td>
+                <td><a href="H_herre_klær.html">Klær</a>
+                </td>
               </tr>
               <tr>
-                <td>SALG</td>
+                <td><a href="Salg.html">SALG</a></td>
               </tr>
               <tr>
-                <td>SKO</td>
+                <td><a href="H_herre_sko.html"> SKO</a></td>
               </tr>
             </tbody>
 
@@ -417,26 +418,26 @@
           <table>
             <thead>
               <tr>
-                <th>DAMER</th>
+                <th><a href="dame.html">DAMER</a></th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td><a href="index.html">FORSIDE</a></td>
+                <td><a href="Dame.html">Damer</a></td>
               </tr>
               <tr>
-                <td>NYHETER</td>
+                <td><a href="D_dame_klær.html">Klær</a>
+                </td>
               </tr>
               <tr>
-                <td>SALG</td>
+                <td><a href="Salg.html">SALG</a></td>
               </tr>
               <tr>
-                <td>SKO</td>
+                <td><a href="D_dame_sko.html"> SKO</a></td>
               </tr>
             </tbody>
 
           </table>
-          <tr>
 
         </section>
 
@@ -444,25 +445,27 @@
           <table>
             <thead>
               <tr>
-                <th>BARN</th>
+                <th><a href="Barn.html">BARN</a></th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td><a href="index.html">FORSIDE</a></td>
+                <td><a href="Barn.html">Barn</a></td>
               </tr>
               <tr>
-                <td>NYHETER</td>
+                <td><a href="B_barne_klær.html">Klær</a>
+                </td>
               </tr>
               <tr>
-                <td>SALG</td>
+                <td><a href="Salg.html">SALG</a></td>
               </tr>
               <tr>
-                <td>SKO</td>
+                <td><a href="B_barn_sko.html"> SKO</a></td>
               </tr>
             </tbody>
 
           </table>
+
         </section>
 
 
