--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
@@ -356,148 +356,155 @@
 
 
 
-  <footer>
+
 
     <section class="reklame2">
       <a href="herre.html"><img src="bilder/reklame_2bild.jpg" alt="bilde"></a>
     </section>
 
 
-    <section class="hele_footer">
+    <footer>
 
 
-      <section class="om_oss_footer">
-        <table>
-          <thead>
-            <tr>
-              <th>INFORMASJON</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><a href="logginn.html"> LOGG INN</a></td>
-            </tr>
-            <tr>
-              <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
-            </tr>
-            <tr>
-              <td>KONTAKT OSS</td>
-            </tr>
-            <tr>
-              <td>BLI MEDLEM</td>
-            </tr>
-          </tbody>
 
-        </table>
+
+
+
+      <section class="hele_footer">
+
+
+        <section class="om_oss_footer">
+          <table>
+            <thead>
+              <tr>
+                <th>INFORMASJON</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="logginn.html"> LOGG INN</a></td>
+              </tr>
+              <tr>
+                <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
+              </tr>
+              <tr>
+                <td><a href="virker_ikke.html">KONTAKT OSS</a></td>
+              </tr>
+              <tr>
+                <td><a href="virker_ikke.html">FÅ NYHETSBREV</a></td>
+              </tr>
+            </tbody>
+
+          </table>
+        </section>
+
+        <section class="Herre_footer">
+          <table>
+            <thead>
+              <tr>
+                <th><a href="herre.html">HERRE</a></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td> <a href="herre.html">Herre</a>
+                </td>
+              </tr>
+              <tr>
+                <td><a href="H_herre_klær.html">Klær</a>
+                </td>
+              </tr>
+              <tr>
+                <td><a href="Salg.html">SALG</a></td>
+              </tr>
+              <tr>
+                <td><a href="H_herre_sko.html"> SKO</a></td>
+              </tr>
+            </tbody>
+
+          </table>
+
+        </section>
+
+        <section class="Dame_footer">
+          <table>
+            <thead>
+              <tr>
+                <th><a href="dame.html">DAMER</a></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="Dame.html">Damer</a></td>
+              </tr>
+              <tr>
+                <td><a href="D_dame_klær.html">Klær</a>
+                </td>
+              </tr>
+              <tr>
+                <td><a href="Salg.html">SALG</a></td>
+              </tr>
+              <tr>
+                <td><a href="D_dame_sko.html"> SKO</a></td>
+              </tr>
+            </tbody>
+
+          </table>
+
+        </section>
+
+        <section class="Barn_footer">
+          <table>
+            <thead>
+              <tr>
+                <th><a href="Barn.html">BARN</a></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="Barn.html">Barn</a></td>
+              </tr>
+              <tr>
+                <td><a href="B_barne_klær.html">Klær</a>
+                </td>
+              </tr>
+              <tr>
+                <td><a href="Salg.html">SALG</a></td>
+              </tr>
+              <tr>
+                <td><a href="B_barn_sko.html"> SKO</a></td>
+              </tr>
+            </tbody>
+
+          </table>
+
+        </section>
+
+
+
+        <section class="sosial_footer">
+          <table>
+            <thead>
+              <tr>
+                <th>Følg oss</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="http://www.singhsandhu.com"><img src="bilder/face.png" class="sosbilder"></a></td>
+                <td><a href="http://www.singhsandhu.com"><img src="bilder/twit.png" class="sosbilder"></a></td>
+                <td><a href="http://www.singhsandhu.com"><img src="bilder/insta.jpg" class="sosbilder"></a></td>
+              </tr>
+
+            </tbody>
+
+          </table>
+        </section>
+
+
+
       </section>
-
-      <section class="Herre_footer">
-        <table>
-          <thead>
-            <tr>
-              <th><a href="Barn.html">HERRE</a></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td> <a href="herre.html">Herre</a>
-              </td>
-            </tr>
-            <tr>
-              <td><a href="klær.html">Klær</a>
-              </td>
-            </tr>
-            <tr>
-              <td><a href="Salg.html">SALG</a></td>
-            </tr>
-            <tr>
-              <td><a href="sko.html"> SKO</a></td>
-            </tr>
-          </tbody>
-
-        </table>
-
-      </section>
-
-      <section class="Dame_footer">
-        <table>
-          <thead>
-            <tr>
-              <th><a href="Barn.html">DAMER</a></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><a href="Dame.html">Damer</a></td>
-            </tr>
-            <tr>
-              <td><a href="klær.html">Klær</a>
-              </td>
-            </tr>
-            <tr>
-              <td><a href="Salg.html">SALG</a></td>
-            </tr>
-            <tr>
-              <td><a href="sko.html"> SKO</a></td>
-            </tr>
-          </tbody>
-
-        </table>
-
-      </section>
-
-      <section class="Barn_footer">
-        <table>
-          <thead>
-            <tr>
-              <th><a href="Barn.html">BARN</a></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><a href="Barn.html">Barn</a></td>
-            </tr>
-            <tr>
-              <td><a href="klær.html">Klær</a>
-              </td>
-            </tr>
-            <tr>
-              <td><a href="Salg.html">SALG</a></td>
-            </tr>
-            <tr>
-              <td><a href="sko.html"> SKO</a></td>
-            </tr>
-          </tbody>
-
-        </table>
-
-      </section>
-
-
-
-      <section class="sosial_footer">
-        <table>
-          <thead>
-            <tr>
-              <th>Følg oss</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><a href="http://www.singhsandhu.com"><img src="bilder/face.png" class="sosbilder"></a></td>
-              <td><a href="http://www.singhsandhu.com"><img src="bilder/twit.png" class="sosbilder"></a></td>
-              <td><a href="http://www.singhsandhu.com"><img src="bilder/insta.jpg" class="sosbilder"></a></td>
-            </tr>
-
-          </tbody>
-
-        </table>
-      </section>
-
-
-
-    </section>
-  </footer>
+    </footer>
 
 
 </body>
