--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/B_barn_sko.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/B_barn_sko.html
@@ -415,7 +415,6 @@
 
 
   <footer>
-
     <section class="hele_footer">
 
 
@@ -434,10 +433,10 @@
               <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
             </tr>
             <tr>
-              <td>KONTAKT OSS</td>
+              <td><a href="virker_ikke.html">KONTAKT OSS</a></td>
             </tr>
             <tr>
-              <td>BLI MEDLEM</td>
+              <td><a href="virker_ikke.html">FÅ NYHETSBREV</a></td>
             </tr>
           </tbody>
 
@@ -448,7 +447,7 @@
         <table>
           <thead>
             <tr>
-              <th><a href="Barn.html">HERRE</a></th>
+              <th><a href="herre.html">HERRE</a></th>
             </tr>
           </thead>
           <tbody>
@@ -457,14 +456,14 @@
               </td>
             </tr>
             <tr>
-              <td><a href="klær.html">Klær</a>
+              <td><a href="H_herre_klær.html">Klær</a>
               </td>
             </tr>
             <tr>
               <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td><a href="sko.html"> SKO</a></td>
+              <td><a href="H_herre_sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
@@ -476,7 +475,7 @@
         <table>
           <thead>
             <tr>
-              <th><a href="Barn.html">DAMER</a></th>
+              <th><a href="dame.html">DAMER</a></th>
             </tr>
           </thead>
           <tbody>
@@ -484,14 +483,14 @@
               <td><a href="Dame.html">Damer</a></td>
             </tr>
             <tr>
-              <td><a href="klær.html">Klær</a>
+              <td><a href="D_dame_klær.html">Klær</a>
               </td>
             </tr>
             <tr>
               <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td><a href="sko.html"> SKO</a></td>
+              <td><a href="D_dame_sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
@@ -511,14 +510,14 @@
               <td><a href="Barn.html">Barn</a></td>
             </tr>
             <tr>
-              <td><a href="klær.html">Klær</a>
+              <td><a href="B_barne_klær.html">Klær</a>
               </td>
             </tr>
             <tr>
               <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td><a href="sko.html"> SKO</a></td>
+              <td><a href="B_barn_sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
