--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/dame_klesplagg.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/dame_klesplagg.html
@@ -345,7 +345,6 @@
         <a href="herre.html"><img src="bilder/reklame_2bild.jpg" alt="bilde"></a>
       </section>
 
-
       <section class="hele_footer">
 
 
@@ -364,10 +363,10 @@
                 <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
               </tr>
               <tr>
-                <td>KONTAKT OSS</td>
+                <td><a href="virker_ikke.html">KONTAKT OSS</a></td>
               </tr>
               <tr>
-                <td>BLI MEDLEM</td>
+                <td><a href="virker_ikke.html">FÅ NYHETSBREV</a></td>
               </tr>
             </tbody>
 
@@ -378,22 +377,23 @@
           <table>
             <thead>
               <tr>
-                <th>HERRE</th>
+                <th><a href="herre.html">HERRE</a></th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td> <a href="index.html">FORSIDE</a>
+                <td> <a href="herre.html">Herre</a>
                 </td>
               </tr>
               <tr>
-                <td>NYHETER</td>
+                <td><a href="H_herre_klær.html">Klær</a>
+                </td>
               </tr>
               <tr>
-                <td>SALG</td>
+                <td><a href="Salg.html">SALG</a></td>
               </tr>
               <tr>
-                <td>SKO</td>
+                <td><a href="H_herre_sko.html"> SKO</a></td>
               </tr>
             </tbody>
 
@@ -405,26 +405,26 @@
           <table>
             <thead>
               <tr>
-                <th>DAMER</th>
+                <th><a href="dame.html">DAMER</a></th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td><a href="index.html">FORSIDE</a></td>
+                <td><a href="Dame.html">Damer</a></td>
               </tr>
               <tr>
-                <td>NYHETER</td>
+                <td><a href="D_dame_klær.html">Klær</a>
+                </td>
               </tr>
               <tr>
-                <td>SALG</td>
+                <td><a href="Salg.html">SALG</a></td>
               </tr>
               <tr>
-                <td>SKO</td>
+                <td><a href="D_dame_sko.html"> SKO</a></td>
               </tr>
             </tbody>
 
           </table>
-          <tr>
 
         </section>
 
@@ -432,25 +432,27 @@
           <table>
             <thead>
               <tr>
-                <th>BARN</th>
+                <th><a href="Barn.html">BARN</a></th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td><a href="index.html">FORSIDE</a></td>
+                <td><a href="Barn.html">Barn</a></td>
               </tr>
               <tr>
-                <td>NYHETER</td>
+                <td><a href="B_barne_klær.html">Klær</a>
+                </td>
               </tr>
               <tr>
-                <td>SALG</td>
+                <td><a href="Salg.html">SALG</a></td>
               </tr>
               <tr>
-                <td>SKO</td>
+                <td><a href="B_barn_sko.html"> SKO</a></td>
               </tr>
             </tbody>
 
           </table>
+
         </section>
 
 
@@ -478,7 +480,6 @@
 
       </section>
     </footer>
-
 
 </body>
 
