--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/herre.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/herre.html
@@ -202,7 +202,7 @@
 
 
       <section class="sko_herre alle_4">
-        <a href="sko.html"><img src="bilder/sko_it.jpg" alt="bilde"> </a>
+        <a href="H_herre_sko.html"><img src="bilder/sko_it.jpg" alt="bilde"> </a>
       </section>
 
       <section class="Accesories alle_4">
@@ -293,10 +293,10 @@
               <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
             </tr>
             <tr>
-              <td>KONTAKT OSS</td>
+              <td><a href="virker_ikke.html">KONTAKT OSS</a></td>
             </tr>
             <tr>
-              <td>BLI MEDLEM</td>
+              <td><a href="virker_ikke.html">FÅ NYHETSBREV</a></td>
             </tr>
           </tbody>
 
@@ -307,7 +307,7 @@
         <table>
           <thead>
             <tr>
-              <th><a href="Barn.html">HERRE</a></th>
+              <th><a href="herre.html">HERRE</a></th>
             </tr>
           </thead>
           <tbody>
@@ -323,7 +323,7 @@
               <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td><a href="sko.html"> SKO</a></td>
+              <td><a href="H_herre_sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
@@ -335,7 +335,7 @@
         <table>
           <thead>
             <tr>
-              <th><a href="Barn.html">DAMER</a></th>
+              <th><a href="dame.html">DAMER</a></th>
             </tr>
           </thead>
           <tbody>
@@ -343,14 +343,14 @@
               <td><a href="Dame.html">Damer</a></td>
             </tr>
             <tr>
-              <td><a href="klær.html">Klær</a>
+              <td><a href="D_dame_klær.html">Klær</a>
               </td>
             </tr>
             <tr>
               <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td><a href="sko.html"> SKO</a></td>
+              <td><a href="D_dame_sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
@@ -370,14 +370,14 @@
               <td><a href="Barn.html">Barn</a></td>
             </tr>
             <tr>
-              <td><a href="klær.html">Klær</a>
+              <td><a href="B_barne_klær.html">Klær</a>
               </td>
             </tr>
             <tr>
               <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td><a href="sko.html"> SKO</a></td>
+              <td><a href="B_barn_sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
