--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/virker_ikke.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/virker_ikke.html
@@ -12,77 +12,79 @@
 
 
   <main>
+    <section>
+      <a href="index.html"><img src="bilder/riktiglogos.pdf" alt="logo" class="logo"></a>
+    </section>
+
     <a href="index.html">
-      <h2>
-        <--Tilbake til forsiden</h2> </a> <h1>NOE NYTT KOMMER OM 15 DAGER!!! </h1>
-          <div id="clockdiv">
-            <div>
-              <span class="days"></span>
-              <div class="smalltext">Days</div>
-            </div>
-            <div>
-              <span class="hours"></span>
-              <div class="smalltext">Hours</div>
-            </div>
-            <div>
-              <span class="minutes"></span>
-              <div class="smalltext">Minutes</div>
-            </div>
-            <div>
-              <span class="seconds"></span>
-              <div class="smalltext">Seconds</div>
-            </div>
-          </div>
+      <h2>Tilbake til forsiden</h2>
+    </a>
+    <h1>NOE NYTT KOMMER OM 15 DAGER!!! </h1>
+    <div id="clockdiv">
+      <div>
+        <span class="days"></span>
+        <div class="smalltext">Days</div>
+      </div>
+      <div>
+        <span class="hours"></span>
+        <div class="smalltext">Hours</div>
+      </div>
+      <div>
+        <span class="minutes"></span>
+        <div class="smalltext">Minutes</div>
+      </div>
+      <div>
+        <span class="seconds"></span>
+        <div class="smalltext">Seconds</div>
+      </div>
+    </div>
 
 
 
-          <script>
-            function getTimeRemaining(endtime) {
-              var t = Date.parse(endtime) - Date.parse(new Date());
-              var seconds = Math.floor((t / 1000) % 60);
-              var minutes = Math.floor((t / 1000 / 60) % 60);
-              var hours = Math.floor((t / (1000 * 60 * 60)) % 24);
-              var days = Math.floor(t / (1000 * 60 * 60 * 24));
-              return {
-                'total': t,
-                'days': days,
-                'hours': hours,
-                'minutes': minutes,
-                'seconds': seconds
-              };
-            }
+    <script>
+      function getTimeRemaining(endtime) {
+        var t = Date.parse(endtime) - Date.parse(new Date());
+        var seconds = Math.floor((t / 1000) % 60);
+        var minutes = Math.floor((t / 1000 / 60) % 60);
+        var hours = Math.floor((t / (1000 * 60 * 60)) % 24);
+        var days = Math.floor(t / (1000 * 60 * 60 * 24));
+        return {
+          'total': t,
+          'days': days,
+          'hours': hours,
+          'minutes': minutes,
+          'seconds': seconds
+        };
+      }
 
-            function initializeClock(id, endtime) {
-              var clock = document.getElementById(id);
-              var daysSpan = clock.querySelector('.days');
-              var hoursSpan = clock.querySelector('.hours');
-              var minutesSpan = clock.querySelector('.minutes');
-              var secondsSpan = clock.querySelector('.seconds');
+      function initializeClock(id, endtime) {
+        var clock = document.getElementById(id);
+        var daysSpan = clock.querySelector('.days');
+        var hoursSpan = clock.querySelector('.hours');
+        var minutesSpan = clock.querySelector('.minutes');
+        var secondsSpan = clock.querySelector('.seconds');
 
-              function updateClock() {
-                var t = getTimeRemaining(endtime);
+        function updateClock() {
+          var t = getTimeRemaining(endtime);
 
-                daysSpan.innerHTML = t.days;
-                hoursSpan.innerHTML = ('0' + t.hours).slice(-2);
-                minutesSpan.innerHTML = ('0' + t.minutes).slice(-2);
-                secondsSpan.innerHTML = ('0' + t.seconds).slice(-2);
+          daysSpan.innerHTML = t.days;
+          hoursSpan.innerHTML = ('0' + t.hours).slice(-2);
+          minutesSpan.innerHTML = ('0' + t.minutes).slice(-2);
+          secondsSpan.innerHTML = ('0' + t.seconds).slice(-2);
 
-                if (t.total <= 0) {
-                  clearInterval(timeinterval);
-                }
-              }
+          if (t.total <= 0) {
+            clearInterval(timeinterval);
+          }
+        }
 
-              updateClock();
-              var timeinterval = setInterval(updateClock, 1000);
-            }
+        updateClock();
+        var timeinterval = setInterval(updateClock, 1000);
+      }
 
-            var deadline = new Date(Date.parse(new Date()) + 15 * 24 * 60 * 60 * 1000);
-            initializeClock('clockdiv', deadline);
-          </script>
+      var deadline = new Date(Date.parse(new Date()) + 15 * 24 * 60 * 60 * 1000);
+      initializeClock('clockdiv', deadline);
+    </script>
 
-          <section>
-            <a href="index.html"><img src="bilder/riktiglogos.pdf" alt="logo" class="logo"></a>
-          </section>
 
 
   </main>
