--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/ønskeliste.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/ønskeliste.html
@@ -69,15 +69,12 @@
     <section class="hele_logginn">
       <h1 class="loginn_tekst">VENNLIGST LOGG INN FOR Å FÅ TILGANG</h1>
       <section class="logginn_side">
-        <a href="index.html" class="loginn_tilbake_til_forside">
-          <--TILBAKE TIL FORSIDEN</a> <br>
+        <a href="index.html" class="loginn_tilbake_til_forside">TILBAKE TIL FORSIDEN</a> <br>
 
-
-            <label>Brukernavn:</label>
-            <input type="text" name="navn" required placeholder="Brukernavn">
-            <br>
-            <label class="passord">Passord:</label>
-            <input type="password" name="Singh" value="Karan"></input>
+        <label>Brukernavn:</label>
+        <input type="text" name="navn" required placeholder="Brukernavn"><br>
+        <label class="passord">Passord:</label>
+        <input type="password" name="Singh" value="Karan"></input>
       </section>
 
       <a href="virker_ikke.html">
@@ -88,11 +85,17 @@
 
   </main>
 
+
+
+  <section class="reklame2">
+    <a href="herre.html"><img src="bilder/reklame_2bild.jpg" alt=""></a>
+  </section>
+
   <footer>
 
-    <section class="reklame2">
-      <a href="herre.html"><img src="bilder/reklame_2bild.jpg" alt=""></a>
-    </section>
+
+
+
 
 
     <section class="hele_footer">
@@ -113,10 +116,10 @@
               <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
             </tr>
             <tr>
-              <td>KONTAKT OSS</td>
+              <td><a href="virker_ikke.html">KONTAKT OSS</a></td>
             </tr>
             <tr>
-              <td>BLI MEDLEM</td>
+              <td><a href="virker_ikke.html">FÅ NYHETSBREV</a></td>
             </tr>
           </tbody>
 
@@ -127,7 +130,7 @@
         <table>
           <thead>
             <tr>
-              <th><a href="Barn.html">HERRE</a></th>
+              <th><a href="herre.html">HERRE</a></th>
             </tr>
           </thead>
           <tbody>
@@ -136,14 +139,14 @@
               </td>
             </tr>
             <tr>
-              <td><a href="klær.html">Klær</a>
+              <td><a href="H_herre_klær.html">Klær</a>
               </td>
             </tr>
             <tr>
               <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td><a href="sko.html"> SKO</a></td>
+              <td><a href="H_herre_sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
@@ -155,7 +158,7 @@
         <table>
           <thead>
             <tr>
-              <th><a href="Barn.html">DAMER</a></th>
+              <th><a href="dame.html">DAMER</a></th>
             </tr>
           </thead>
           <tbody>
@@ -163,14 +166,14 @@
               <td><a href="Dame.html">Damer</a></td>
             </tr>
             <tr>
-              <td><a href="klær.html">Klær</a>
+              <td><a href="D_dame_klær.html">Klær</a>
               </td>
             </tr>
             <tr>
               <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td><a href="sko.html"> SKO</a></td>
+              <td><a href="D_dame_sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
@@ -190,14 +193,14 @@
               <td><a href="Barn.html">Barn</a></td>
             </tr>
             <tr>
-              <td><a href="klær.html">Klær</a>
+              <td><a href="B_barne_klær.html">Klær</a>
               </td>
             </tr>
             <tr>
               <td><a href="Salg.html">SALG</a></td>
             </tr>
             <tr>
-              <td><a href="sko.html"> SKO</a></td>
+              <td><a href="B_barn_sko.html"> SKO</a></td>
             </tr>
           </tbody>
 
