--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/logginn.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/logginn.html
@@ -44,7 +44,7 @@
     <div class="lenke logginn">
 
 
-      <a href="logginn.html"><img src="bilder/logg inn.png" alt="" class="logginnbilde"> </a>
+      <a href="logginn.html"><img src="bilder/logg inn.png" alt="bilde" class="logginnbilde"> </a>
 
       <a href="logginn.html"><br>LOGG INN</a>
 
@@ -56,7 +56,7 @@
 
     <div class="lenke logginn">
 
-      <a href="ønskeliste.html"><img src="bilder/ønskeliste.png" alt="" class="logginnbilde"> </a>
+      <a href="ønskeliste.html"><img src="bilder/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
 
       <a href="ønskeliste.html">LISTE</a>
 
@@ -88,7 +88,7 @@
 
 
   <section class="reklame2">
-    <a href="herre.html"><img src="bilder/reklame_2bild.jpg" alt=""></a>
+    <a href="herre.html"><img src="bilder/reklame_2bild.jpg" alt="bilde"></a>
   </section>
 
 
