--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/sko.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/sko.html
@@ -46,7 +46,7 @@
     <div class="lenke logginn">
 
 
-      <a href="logginn.html"><img src="bilder/logg inn.png" alt="" class="logginnbilde"> </a>
+      <a href="logginn.html"><img src="bilder/logg inn.png" alt="bilde" class="logginnbilde"> </a>
 
       <a href="logginn.html"><br>LOGG INN</a>
 
@@ -58,7 +58,7 @@
 
     <div class="lenke logginn">
 
-      <a href="ønskeliste.html"><img src="bilder/ønskeliste.png" alt="" class="logginnbilde"> </a>
+      <a href="ønskeliste.html"><img src="bilder/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
 
       <a href="ønskeliste.html">LISTE</a>
 
@@ -149,21 +149,21 @@
 
     <section class="sko_kjønn">
       <section class="Sko_herre">
-        <a href="H_herre_sko.html"><img src="bilder/herre sko.jpg" alt=""> </a>
+        <a href="H_herre_sko.html"><img src="bilder/herre sko.jpg" alt="bilde"> </a>
         <a href="H_herre_sko.html">
           <p>Herre sko</p>
         </a>
       </section>
 
       <section class="Sko_dame">
-        <a href="D_dame_sko.html"><img src="bilder/dame sko.jpg" alt=""> </a>
+        <a href="D_dame_sko.html"><img src="bilder/dame sko.jpg" alt="bilde"> </a>
         <a href="D_dame_sko.html">
           <p>Dame sko</p>
         </a>
       </section>
 
       <section class="Sko_barn">
-        <a href="B_barn_sko.html"><img src="bilder/sko barn.jpg" alt=""> </a>
+        <a href="B_barn_sko.html"><img src="bilder/sko barn.jpg" alt="bilde"> </a>
         <a href="B_barn_sko.html">
           <p>Barne sko</p>
         </a>
@@ -335,7 +335,7 @@
 
 
       <section class="velge_klær">
-        <div class="bilde"><img src="bilder/prosen.jpg" alt=""></div>
+        <div class="bilde"><img src="bilder/prosen.jpg" alt="bilde"></div>
         <div class="Merke">Polo Ralph Lauren </div>
         <div class="navn">BEAR - Strikkegenser
         </div>
@@ -343,7 +343,7 @@
       </section>
 
       <section class="velge_klær">
-        <div class="bilde"><img src="bilder/lauren_it.jpg" alt=""></div>
+        <div class="bilde"><img src="bilder/lauren_it.jpg" alt="bilde"></div>
         <div class="Merke">Polo Ralph Lauren </div>
         <div class="navn">strikkegenser
         </div>
@@ -351,7 +351,7 @@
       </section>
 
       <section class="velge_klær">
-        <div class="bilde"><img src="bilder/it dress.jpg" alt=""></div>
+        <div class="bilde"><img src="bilder/it dress.jpg" alt="bilde"></div>
         <div class="Merke">VERSACE </div>
         <div class="navn"> dress jakke
         </div>
@@ -359,7 +359,7 @@
       </section>
 
       <section class="velge_klær">
-        <div class="bilde"><img src="bilder/it klesnettside nyhet.jpg" alt=""></div>
+        <div class="bilde"><img src="bilder/it klesnettside nyhet.jpg" alt="bilde"></div>
         <div class="Merke">Napapirji </div>
         <div class="navn">Utebukse
         </div>
@@ -367,7 +367,7 @@
       </section>
 
       <section class="velge_klær">
-        <div class="bilde"><img src="bilder/prosen.jpg" alt=""></div>
+        <div class="bilde"><img src="bilder/prosen.jpg" alt="bilde"></div>
         <div class="Merke">Polo Ralph Lauren </div>
         <div class="navn">BEAR - Strikkegenser
         </div>
@@ -375,7 +375,7 @@
       </section>
 
       <section class="velge_klær">
-        <div class="bilde"><img src="bilder/lauren_it.jpg" alt=""></div>
+        <div class="bilde"><img src="bilder/lauren_it.jpg" alt="bilde"></div>
         <div class="Merke">Polo Ralph Lauren </div>
         <div class="navn">strikkegenser
         </div>
